[issue-30][ RJ ] updating things

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -34,7 +34,7 @@
             <i class="fab fa-superpowers"></i> Premium Subscription</a>
           </li>
           <li class=""><a data-toggle="tab" href="#delete-account">
-            <i class="fab fa-trash"></i> Delete Account</a>
+            <i class="fas fa-trash"></i> Delete Account</a>
           </li>
         </ul>
         <div class="tab-content">
