--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,12 +1,11 @@
-<div class="footer">
-  <nav class="navbar">
-    <ul class="nav">
-      <li class="navbar-text"><%= link_to "Terms of Service", terms_of_service_path, class: 'pull-left' %></li>
-      <li class="navbar-text"><%= link_to "Terms of Use & Privacy Policy", privacy_path %></li>
-      <li class="navbar-text"><a href="#">Copyright RespondersNOW.com &copy; 2016-2018</a></li>
-      <li class="navbar-text"><a href="#">Made in America</a></li>
-    </ul>
-  </nav>
+<div class="footer pull-right">
+  <ul style="list-style-type: none;">
+    <li class="navbar-text"><%= link_to "Terms of Service", terms_of_service_path, class: 'pull-left' %></li>
+    <li class="navbar-text"><%= link_to "Terms of Use & Privacy Policy", privacy_path %></li>
+    <li class="navbar-text"><a href="#">RespondersNOW.com &copy; 2018</a></li>
+    <li class="navbar-text"><a href="#">Made in America</a></li>
+  </ul>
+  <span class="flag-icon flag-icon-us"></span>
 </div>
 
 <style>
