--- a/app/views/users/_main_nav.html.erb
+++ b/app/views/users/_main_nav.html.erb
@@ -8,10 +8,10 @@
     <i class="fas fa-cogs"></i><span class="nav-label"> Settings</span>
   <% end %>
 </li>
-<li class="">
-  <a href="#">
+<li class="<%= is_active_controller('live') %>">
+  <%= link_to live_path do %>
     <i class="fas fa-ambulance"></i> <span class="nav-label"> Live Map</span>
-  </a>
+  <% end %>
 </li>
 <li class="<%= is_active_action('certifications') %>">
   <%= link_to user_certifications_path(current_user) do %>
