[issue-42][ RJ ] bump

--- a/app/views/live/index.html.erb
+++ b/app/views/live/index.html.erb
@@ -1,28 +1,26 @@
-<!--<div class="row wrapper border-bottom white-bg page-heading">-->
-<!--  <div class="col-sm-4">-->
-<!--    <div class="input-group stylish-input-group">-->
-<!--      <input type="text" class="form-control" placeholder="place holder for where the search bar will go. search here...">-->
-<!--      <span class="input-group-addon">-->
-<!--                        <button type="submit">-->
-<!--                          <span class="fas fa-search"></span>-->
-<!--                        </button>-->
-<!--                      </span>-->
-<!--    </div>-->
-<!--    <ol class="breadcrumb">-->
-<!--      <li>-->
-<!--        <a href="<%#= url_for :controller => 'dashboards', :action => 'dashboard_1' %>">Live Map</a>-->
-<!--      </li>-->
-<!--      <li class="active">-->
-<!--        <strong>Regional Incidents</strong>-->
-<!--      </li>-->
-<!--    </ol>-->
-<!--  </div>-->
-<!--  <div class="col-sm-8">-->
-<!--    <div class="title-action">-->
-<!--      <a href="" class="btn btn-primary">Send Report</a>-->
-<!--    </div>-->
-<!--  </div>-->
-<!--</div>-->
+<div class="row wrapper border-bottom white-bg page-heading">
+
+  <div class="col-sm-4">
+    <h2>Live Regional Map</h2>
+    <ol class="breadcrumb">
+      <li>
+        <a href="<%= url_for :controller => 'dashboards', :action => 'dashboard_1' %>">This is</a>
+      </li>
+      <li class="active">
+        <strong>Breadcrumb</strong>
+      </li>
+    </ol>
+  </div>
+  <div class="col-sm-8">
+    <div class="title-action">
+      <div class="btn-group">
+        <a href="" class="btn btn-primary">Send Report</a>
+        <a href="" class="btn btn-primary">Request Help</a>
+        <a href="" class="btn btn-primary">Request Help</a>
+      </div>
+    </div>
+  </div>
+</div>
 <div class="row">
   <div class="col-lg-12">
     <div class="wrapper wrapper-content">
