[issue-42][ RJ ] did a  LOT with apollo

--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -26,10 +26,10 @@
     </div>
   </nav>
 </div>
-<style>Profile Com
-.text-blue {
-  text: '#1C76BB';
-}
+<style>
+  .text-blue {
+    text: '#1C76BB';
+  }
 </style>
 <div id="inSlider" class="carousel carousel-fade blur" data-ride="carousel">
   <!--<ol class="carousel-indicators">-->
