--- a/app/views/live/index.html.erb
+++ b/app/views/live/index.html.erb
@@ -24,7 +24,7 @@
 <div class="row">
   <div class="col-lg-12">
     <div class="wrapper wrapper-content">
-      <div id="live-map"></div>
+      <div id="root"/>
     </div>
   </div>
 </div>
