--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
   <script defer src="https://use.fontawesome.com/releases/v5.5.0/js/all.js"></script>
   <%= csrf_meta_tags %>
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCya6eVkasAwZfvsIovC63YcAc3QcGHZqI&libraries=places"></script>
   <!-- Facebook Pixel Code -->
   <script type="text/javascript" charset="utf-8">
       !function (f, b, e, v, n, t, s) {
