--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -1,6 +1,6 @@
 <head>
   <title>RespondersNOW</title>
-  <script defer src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"></script>
+  <script defer src="https://use.fontawesome.com/releases/v5.5.0/js/all.js"></script>
 </head>
 <div class="navbar-wrapper">
   <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
@@ -26,10 +26,10 @@
     </div>
   </nav>
 </div>
-<style>Profile Com
-.text-blue {
-  text: '#1C76BB';
-}
+<style>
+  .text-blue {
+    text: '#1C76BB';
+  }
 </style>
 <div id="inSlider" class="carousel carousel-fade blur" data-ride="carousel">
   <!--<ol class="carousel-indicators">-->
@@ -860,8 +860,7 @@
                   var sy = scrollY();
                   if (sy >= changeHeaderOn) {
                       $(header).addClass('navbar-scroll')
-                  }
-                  else {
+                  } else {
                       $(header).removeClass('navbar-scroll')
                   }
                   didScroll = false;
