--- a/app/views/live/index.html.erb
+++ b/app/views/live/index.html.erb
@@ -1,26 +1,5 @@
-<div class="row wrapper border-bottom white-bg page-heading">
+<div class="row wrapper border-bottom white-bg page-heading"/>
 
-  <div class="col-sm-4">
-    <h2>Live Regional Map</h2>
-    <ol class="breadcrumb">
-      <li>
-        <a href="<%= url_for :controller => 'dashboards', :action => 'dashboard_1' %>">This is</a>
-      </li>
-      <li class="active">
-        <strong>Breadcrumb</strong>
-      </li>
-    </ol>
-  </div>
-  <div class="col-sm-8">
-    <div class="title-action">
-      <div class="btn-group">
-        <a href="" class="btn btn-primary">Send Report</a>
-        <a href="" class="btn btn-primary">Request Help</a>
-        <a href="" class="btn btn-primary">Request Help</a>
-      </div>
-    </div>
-  </div>
-</div>
 <div class="row">
   <div class="col-lg-12">
     <div class="wrapper wrapper-content">
@@ -28,8 +7,4 @@
     </div>
   </div>
 </div>
-<style>
-
-</style>
-
 <%= javascript_pack_tag 'live' %>
