wow... the changes.

--- a/app/views/certifications/_form.html.erb
+++ b/app/views/certifications/_form.html.erb
@@ -1,33 +1,34 @@
 <div>
   <%= simple_form_for cert,
-                      url: acquired_certifications_path,
-                      method: :post,
-                      defaults: {inner_html: 'form-control'} do |f| %>
+                      url:      acquired_certifications_path,
+                      method:   :post,
+                      defaults: { inner_html: 'form-control' } do |f| %>
     <% if primary %>
-      <%= f.association :certification, collection: Certification.primaries %>
+      <%= f.association :certification, collection: Certification.all.order(:name) %>
     <% else %>
       <%= f.association :certification, collection: Certification.secondary %>
     <% end %>
     Are we missing a certification or course ? click <%= link_to "here", new_certification_path %>
     <%= f.input :state, collection: us_states %>
     <%= f.input :number %>
+    <%= f.input :ceus %>
     <div class="form-group">
       <%= f.input :acquired_on, as: :date, start_year: Date.today.year - 50,
-                  end_year: Date.today.year, discard_day: true,
-                  order: [:month, :year], label: 'Aquired On', id: 'wh-end-date' %>
+                  end_year:         Date.today.year, discard_day: true,
+                  order:            [:month, :year], label: 'Aquired On', id: 'wh-end-date' %>
 
       <%= f.input :expires,
-                  label: "Does this Expire ?",
-                  id: 'does-it-exipre',
-                  as: :select,
-                  selected: false,
-                  checked_value: "NO",
+                  label:           "Does this Expire ?",
+                  id:              'does-it-exipre',
+                  as:              :select,
+                  selected:        false,
+                  checked_value:   "NO",
                   unchecked_value: "YES" %>
 
 
       <%= f.input :expires_on, as: :date, start_year: Date.today.year + 10, end_year: Date.today.year,
-                  discard_day: true, order: [:month, :year], label: 'Expires On', id: 'wh-end-date expires-date', inner_html: 'hidden',
-                  required: false
+                  discard_day:     true, order: [:month, :year], label: 'Expires On', id: 'wh-end-date expires-date', inner_html: 'hidden',
+                  required:        false
       %>
     </div>
 
@@ -37,9 +38,9 @@
   <% end %>
 </div>
 <script type="text/javascript" charset="utf-8">
-    $('.acquired_certification_expires_on').toggleClass('hidden');
+  $('.acquired_certification_expires_on').toggleClass('hidden')
 
-    $('.acquired_certification_expires').change(function () {
-        $('.acquired_certification_expires_on').toggleClass('hidden');
-    });
+  $('.acquired_certification_expires').change(function () {
+    $('.acquired_certification_expires_on').toggleClass('hidden')
+  })
 </script>
