--- a/app/views/certifications/new.html.erb
+++ b/app/views/certifications/new.html.erb
@@ -17,7 +17,6 @@
 
 
 <div class="row">
-  <hr>
   <div class="col-lg-2"></div>
   <div class="col-lg-8">
     <div class="panel panel-primary">
@@ -25,35 +24,41 @@
         <h5 class="panel-title">Add New Certification</h5>
       </div>
       <div class="panel-body">
-        <%= simple_form_for @certification, class: "form-horizontal", defaults: {label: false, inner_html: 'form-control'} do |f| %>
-          <div class="form-group"><label class="col-sm-2 control-label">Course or Certification Name</label>
+        <%= simple_form_for @certification, class: "form-horizontal", defaults: { label: false, inner_html: 'form-control' } do |f| %>
+          <div class="form-group">
             <div class="col-sm-10">
+              <%= f.label 'Certification Name' %>
               <%= f.input :name %>
             </div>
           </div>
-          <div class="form-group"><label class="col-sm-2 control-label">Course Code</label>
+          <div class="form-group">
             <div class="col-sm-10">
+              <%= f.label 'Course Code' %>
               <%= f.input :course_code, collection: Certification::CODES %>
             </div>
           </div>
-          <div class="form-group"><label class="col-sm-2 control-label">Primary Certification?</label>
+          <div class="form-group">
             <div class="col-sm-10">
+              <%= f.label 'Main Certification' %>
               <%= f.input :primary,
-                          as: :select,
-                          selected: false,
-                          checked_value: "NO",
+                          as:              :select,
+                          selected:        false,
+                          checked_value:   "NO",
                           unchecked_value: "YES" %>
+              <small>emt, paramedic, rn?</small>
             </div>
           </div>
 
-          <div class="form-group"><label class="col-sm-2 control-label">Abbreviation</label>
+          <div class="form-group">
             <div class="col-sm-10">
+              <%= f.label 'abvr' %>
               <%= f.input :abbvr, required: false %>
             </div>
           </div>
 
-          <div class="form-group"><label class="col-sm-2 control-label">Logo</label>
+          <div class="form-group">
             <div class="col-sm-10">
+              <%= f.label 'Logo or Icon' %>
               <%= f.input :logo, as: :file, required: false %>
             </div>
           </div>
@@ -71,7 +76,6 @@
       These submissions will get more complex as we go. We will be adding training site, default CEUs, and more. <br>
       Thank you very much for your help. While not all submissions will be accepted, we will do our best to make
       sure this list is an accurate representation of the training you participate in.
-
     </p>
   </div>
   <div class="col-lg-2"></div>
